--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-"build":"npm install --prefix backend &&  npm install --prefix backend && npm run build --prefix frontend",
-"start":"npm run start --prefix backend"
+"build":"npm install --prefix Backend &&  npm install --prefix Backend && npm run build --prefix Frontend",
+"start":"npm run start --prefix Backend"
   },
   "keywords": [],
   "author": "",
